--- a/wrg-config.json
+++ b/wrg-config.json
@@ -1,17 +1,12 @@
 {
   "site": {
-    "title": "Web Replay Gen Example"
+    "title": "WebRecorder playback demo"
   },
   "archives": [
     {
-      "name": "Example",
-      "url": "https://replayweb.page/docs/assets/example.wacz",
-      "description": "ReplayWeb.Page web archive example"
-    },
-    {
-      "name": "Twitter",
-      "url": "s3://webrecorder-builds/warcs/netpreserve-twitter.warc",
-      "description": "Netpreserve Twitter web archive example"
+      "name": "Clinton Trials",
+      "url": "./archives/clinton.wacz",
+      "description": "web archive example"
     }
   ]
 }
