replace with archives folder

--- a/wrg-config.json
+++ b/wrg-config.json
@@ -2,11 +2,5 @@
   "site": {
     "title": "WebRecorder playback demo"
   },
-  "archives": [
-    {
-      "name": "Clinton Trials",
-      "url": "./archives/clinton.wacz",
-      "description": "web archive example"
-    }
-  ]
+  "archivesPath": "archives"
 }
